# oat-tools

./: DEVELOPER.md  README.md  pyproject.toml
.github/workflows/: release.yml
src/oat_tools/: captions.py  cli.py  references.py  wordcounter.py
tests/: test_captions.py  test_references.py  test_wordcounter.py
tests/data/: testing.md
