[project]
name = "oat-tools"
version = "1.1.2"
description = "OAT Tools is a CLI for managing Oppimispäiväkirja Markdown files."
readme = "README.md"
authors = [
    { name = "Jani Sourander", email = "jani.sourander@kamk.fi" }
]
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "tabulate>=0.9.0",
]

[project.scripts]
oat = "oat_tools:cli.cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.11",
]
